bynkc/tests/fixtures/positive/55_opaque_with_refinement/input.bynk
commons opacity.refined {
  type Timestamp = opaque Int where NonNegative

  fn Timestamp.epoch() -> Timestamp {
    Timestamp.unsafe(0)
  }
}
