bynkc/tests/fixtures/negative/170_malformed_float_leading/input.bynk
commons bad {
  fn f() -> Float {
    .5
  }
}
